fix formatting and grammar

--- a/content/blog/2022-04-27-e2e-cv-pt1.md
+++ b/content/blog/2022-04-27-e2e-cv-pt1.md
@@ -3,6 +3,7 @@ title:
   'End-to-End Computer Vision API, Part 1: Data Versioning and ML pipelines'
 date: 2022-04-27
 description: >
+
   In the last few years, training a well-performing Computer Vision (CV) model
   in Jupyter Notebooks became fairly straightforward if you use pre-trained Deep
   Learning models and high-level libraries that abstract away much of the
@@ -12,6 +13,8 @@ description: >
   customers and our business.
 
 descriptionLong: |
+  _This is the first part of a three-part series of posts._
+
   In the last few years, training a well-performing Computer Vision (CV) model in Jupyter Notebooks became fairly straightforward if you use pre-trained Deep Learning models and high-level libraries that abstract away much of the complexity (`fastai`, `keras`, `pytorch-lightning` are just a few examples). 
   The hard part is still incorporating this model into an application that runs in a production environment bringing value to the customers and our business.
 picture: <TBD>
@@ -29,25 +32,25 @@ tags:
 
 ### Introduction
 
-A typical ML project lifecycle goes through 3 phases:
+A typical ML project lifecycle goes through three phases:
 
-- Active exploration or proof-of-concept phase. Here we try many different
-  approaches to data preprocessing, model architectures and hyperparameter
-  tuning with the goal to finally settle on the most promising combination
-- Application development phase. Here we build all the “plumbing” around the
-  model, that is: getting input data, massaging it into the right format,
-  passing it to the model, and, finally, serving the model's output. The goal
-  here is to end up with a version of an end-to-end application that is robust
-  and well-performing enough to be considered for deployment to the production
-  environment.
-- Production deployment phase. Here we promote a well-tested version of the
-  application from the development environment to the production environment.
+1. Active exploration or proof-of-concept phase. Here we try many different
+   approaches to data preprocessing, model architectures, and hyperparameter
+   tuning with the goal of finally settling on the most promising combination
+2. Application development phase. Here we build all the “plumbing” around the
+   model, that is: getting input data, massaging it into the right format,
+   passing it to the model, and, finally, serving the model's output. The goal
+   here is to end up with a version of an end-to-end application that is robust
+   and well-performing enough to be considered for deployment to the production
+   environment.
+3. Production deployment phase. Here we promote a well-tested version of the
+   application from the development environment to the production environment.
 
-This is the first part of a three-part series of posts that will describe an
-approach that streamlines all three phases. As our demo project, we've selected
-a very common deployment pattern in CV projects: a CV model wrapped in a web API
-service. Automatic defect detection is an example problem that we are addressing
-with this pattern. Specifically, we'll perform an
+In this seris of posts we'll describe an approach that streamlines all three
+phases. As our demo project, we've selected a very common deployment pattern in
+CV projects: a CV model wrapped in a web API service. Automatic defect detection
+is an example problem that we are addressing with this pattern. Specifically,
+we'll perform an
 [image segmentation](https://ai.stanford.edu/~syyeung/cvweb/tutorial3.html) task
 on a magnetic tiles dataset first introduced in this
 [paper](https://www.researchgate.net/profile/Congying-Qiu/publication/327701995_Saliency_defect_detection_of_magnetic_tiles/links/5b9fd1bd45851574f7d25019/Saliency-defect-detection-of-magnetic-tiles.pdf)
@@ -292,7 +295,7 @@ to insert values from different sources in the YAML structure itself.
 
 DVC tracks which stages of the pipeline experienced changes and only reruns
 those. By changes, we mean _everything_ that might affect the predictive
-performance of your model i.e. changes to the dataset, source code and/or
+performance of your model i.e. changes to the dataset, source code, and/or
 parameters. This not only ensures complete reproducibility but often
 significantly reduces the time needed to rerun the whole pipeline while ensuring
 consistent results on every rerun. For example, if we only change the code in
