--- a/content/blog/2022-04-26-e2e-cv-pt1.md
+++ b/content/blog/2022-04-26-e2e-cv-pt1.md
@@ -36,7 +36,7 @@ A typical ML project lifecycle goes through three phases:
 
 1. Active exploration or proof-of-concept phase. Here we try many different
    approaches to data preprocessing, model architectures, and hyperparameter
-   tuning with the goal of finally settling on the most promising combination
+   tuning with the goal of finally settling on the most promising combination.
 2. Application development phase. Here we build all the “plumbing” around the
    model, that is: getting input data, massaging it into the right format,
    passing it to the model, and, finally, serving the model's output. The goal
@@ -46,7 +46,7 @@ A typical ML project lifecycle goes through three phases:
 3. Production deployment phase. Here we promote a well-tested version of the
    application from the development environment to the production environment.
 
-In this seris of posts we'll describe an approach that streamlines all three
+In this series of posts we'll describe an approach that streamlines all three
 phases. As our demo project, we've selected a very common deployment pattern in
 CV projects: a CV model wrapped in a web API service. Automatic defect detection
 is an example problem that we are addressing with this pattern. Specifically,
@@ -58,6 +58,14 @@ and available in this GitHub
 [repository](https://github.com/abin24/Magnetic-tile-defect-datasets.).
 
 ![A sample from the image segmentation dataset we used for this project. Top row: images of magnetic tile surfaces. Bottom row: segmentation mask (white pixels show defective areas)](/uploads/images/2022-04-26/dataset_sample.png '=800')
+
+- This post (part 1) introduces the concepts of data versioning and ML pipelines
+  as they apply to Computer Vision projects.
+- Part 2 will focus on experiment tracking and management - key components
+  needed for effective collaboration between team members.
+- In part 3, you’ll learn how to easily move your model training workloads from
+  a local machine to cloud infrastructure and set up proper CI/CD workflows for
+  ML projects.
 
 ### Target Audience
 
@@ -77,8 +85,7 @@ All the code for the project is stored in this GitHub
 The CV API solution that we are proposing can be summarized in the following
 steps:
 
-- Client service will make a POST request with an image as a payload to our API
-  endpoint
+- Client service will submit the image to our API endpoint
 - The image will be preprocessed to adhere to the specifications that our model
   expects
 - The CV model will ingest the processed image and output its prediction image
@@ -280,36 +287,6 @@ Running stage 'data_split':
 Running stage 'train':
 > python src/stages/train.py --config=params.yaml
 ...
-Running stage 'evaluate':
-> python src/stages/eval.py --config=params.yaml
-...
-```
-
-Our DVC pipeline relies on the parameters defined in the
-[`params.yaml`](https://github.com/iterative/magnetic-tiles-defect/blob/main/params.yaml)
-file. By loading its contents in each stage, we can avoid hard-coded parameters.
-It also allows rerunning the whole or parts of our pipeline under a different
-set of parameters. The DVC pipeline YAML file `dvc.yaml` supports a
-[templating format](https://dvc.org/doc/user-guide/project-structure/pipelines-files#templating)
-to insert values from different sources in the YAML structure itself.
-
-DVC tracks which stages of the pipeline experienced changes and only reruns
-those. By changes, we mean _everything_ that might affect the predictive
-performance of your model i.e. changes to the dataset, source code, and/or
-parameters. This not only ensures complete reproducibility but often
-significantly reduces the time needed to rerun the whole pipeline while ensuring
-consistent results on every rerun. For example, if we only change the code in
-the evaluation stage (e.g. change what type of metrics we want to compute),
-there is no reason for us to rerun the often time-consuming data preprocessing
-and model training stages:
-
-```bash
-$ dvc exp run
-Running stage 'check_packages':
-> pipenv run pip freeze > requirements.txt
-Stage 'data_load' didn't change, skipping
-Stage 'data_split' didn't change, skipping
-Stage 'train' didn't change, skipping
 Running stage 'evaluate':
 > python src/stages/eval.py --config=params.yaml
 ...
