change date to 2022-05-03

--- a/content/blog/2022-05-03-e2e-cv-pt1.md
+++ b/content/blog/2022-05-03-e2e-cv-pt1.md
@@ -1,7 +1,7 @@
 ---
 title:
   'End-to-End Computer Vision API, Part 1: Data Versioning and ML pipelines'
-date: 2022-04-26
+date: 2022-05-03
 description: >
 
   In the last few years, training a well-performing Computer Vision (CV) model
@@ -17,10 +17,9 @@ descriptionLong: |
 
   In the last few years, training a well-performing Computer Vision (CV) model in Jupyter Notebooks became fairly straightforward if you use pre-trained Deep Learning models and high-level libraries that abstract away much of the complexity (`fastai`, `keras`, `pytorch-lightning` are just a few examples). 
   The hard part is still incorporating this model into an application that runs in a production environment bringing value to the customers and our business.
-picture: <TBD>
-pictureComment: <TBD>
+picture: 2022-05-03/e2e-cv-pt1-cover.png
 author: alex_kim
-commentsUrl: <TBD>
+commentsUrl: https://discuss.dvc.org/t/end-to-end-computer-vision/1178
 tags:
   - Computer Vision
   - DVC
@@ -57,7 +56,7 @@ on a magnetic tiles dataset first introduced in this
 and available in this GitHub
 [repository](https://github.com/abin24/Magnetic-tile-defect-datasets.).
 
-![A sample from the image segmentation dataset we used for this project. Top row: images of magnetic tile surfaces. Bottom row: segmentation mask (white pixels show defective areas)](/uploads/images/2022-04-26/dataset_sample.png '=800')
+![A sample from the image segmentation dataset we used for this project. Top row: images of magnetic tile surfaces. Bottom row: segmentation mask (white pixels show defective areas)](/uploads/images/2022-05-03/dataset_sample.png '=800')
 
 - This post (part 1) introduces the concepts of data versioning and ML pipelines
   as they apply to Computer Vision projects.
@@ -102,7 +101,7 @@ beyond the scope of this blog post. In short, we can say that it's based on the
 Heroku platform through a Docker container defined in this
 [`Dockerfile`](https://github.com/iterative/magnetic-tiles-defect/blob/main/Dockerfile).
 
-![Simplified diagram of the CV API solution](/uploads/images/2022-04-26/web_api_diagram.png '=800')
+![Simplified diagram of the CV API solution](/uploads/images/2022-05-03/web_api_diagram.png '=800')
 
 ### Prerequisites for Reproduction
 
