--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -1,6 +1,6 @@
 ---
 title: 'End-to-End Computer Vision API, Part 2: Local Experiments'
-date: 2022-04-27
+date: 2022-05-04
 description: >
   In part 1 of this series of posts, we introduced a solution to a common
   problem faced by companies in the manufacturing industry: detecting defects
@@ -15,9 +15,8 @@ descriptionLong: |
   In part 1 of this series of posts, we introduced a solution to a common problem faced by companies in the manufacturing industry: detecting defects from images of products moving along a production line. The solution we proposed was a Deep Learning-based image segmentation model wrapped in a web API. We talked about effective management and versioning of large datasets and the creation of reproducible ML pipelines.
 
 picture: <TBD>
-pictureComment: <TBD>
 author: alex_kim
-commentsUrl: <TBD>
+commentsUrl: https://discuss.dvc.org/t/end-to-end-computer-vision/1178
 tags:
   - Computer Vision
   - DVC
@@ -145,7 +144,7 @@ remote repository e.g. trying different learning rates and batch sizes. Note
 that earlier we discarded all local experiments whose performance we weren’t
 satisfied with.
 
-![Studio view](/uploads/images/2022-04-27/studio_view.png '=800')
+![Studio view](/uploads/images/2022-05-04/studio_view.png '=800')
 
 To track detailed information about the training process, we integrated
 [DVCLive](https://dvc.org/doc/dvclive) into the training code by
@@ -155,7 +154,7 @@ learning metrics and other metadata in simple file formats, which is fully
 compatible with DVC. Below we can see the evolution of the key metrics and the
 value of the loss function throughout training for a set of selected commits.
 
-![DVCLive metrics displayed in Studio](/uploads/images/2022-04-27/dvc_live_studio.png '=800')
+![DVCLive metrics displayed in Studio](/uploads/images/2022-05-04/dvc_live_studio.png '=800')
 
 Now, for example, if we see that the loss function hasn't reached a plateau
 after a certain number of epochs, we’ll try increasing this number. Or, even
