--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -14,7 +14,7 @@ descriptionLong: |
 
   In part 1 of this series of posts, we introduced a solution to a common problem faced by companies in the manufacturing industry: detecting defects from images of products moving along a production line. The solution we proposed was a Deep Learning-based image segmentation model wrapped in a web API. We talked about effective management and versioning of large datasets and the creation of reproducible ML pipelines.
 
-picture: <TBD>
+picture: 2022-05-04/e2e-cv-pt2-cover.png
 author: alex_kim
 commentsUrl: https://discuss.dvc.org/t/end-to-end-computer-vision/1178
 tags:
