--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -28,13 +28,13 @@ tags:
 
 ### Introduction
 
-Earlier we built a pipeline that produces a trained Computer Vision model. Now
-we need a way to efficiently tune configurations of the pipeline and
-hyperparameters of the model. We want the ability to:
+Earlier, we built a pipeline that produces a trained Computer Vision model. Now
+we need a way to efficiently tune its configuration and the hyperparameters of
+the model. We want the ability to:
 
 - Run many experiments and easily compare their results to pick the
   best-performing ones.
-- Track the global history of the model’s performance, and map each improvement
+- Track the global history of the model's performance, and map each improvement
   to a particular change in code, configuration, or data.
 - Zoom into the details of each training run to help us diagnose issues.
 
@@ -52,11 +52,11 @@ to insert values from different sources in the YAML structure itself.
 
 DVC tracks which stages of the pipeline experienced changes and only reruns
 those. By changes, we mean _everything_ that might affect the predictive
-performance of your model i.e. changes to the dataset, source code and/or
+performance of your model like changes to the dataset, source code and/or
 parameters. This not only ensures complete reproducibility but often
 significantly reduces the time needed to rerun the whole pipeline while ensuring
 consistent results on every rerun. For example, if we only change the code in
-the evaluation stage (e.g. change what type of metrics we want to compute),
+the evaluation stage (e.g., change what type of metrics we want to compute),
 there is no reason for us to rerun the often time-consuming data preprocessing
 and model training stages:
 
@@ -76,10 +76,10 @@ There is a super convenient set of
 [Experiment Management](https://dvc.org/doc/user-guide/experiment-management)
 features that makes switching between reproducible experiments very easy without
 adding failed experiments to your git history. Check out this
-[blog post](https://dvc.org/blog/ml-experiment-versioning) which talks about the
-idea of "ML Experiments as Code". That means treating experiments as you’d treat
-code i.e. use git to track all changes in configs, metrics, and data versions
-through text files. This approach removes the need to have a separate
+[blog post](https://dvc.org/blog/ml-experiment-versioning), which talks about
+the idea of "ML Experiments as Code." That means treating experiments as you'd
+treat code, that is, use git to track all changes in configs, metrics, and data
+versions through text files. This approach removes the need for a separate
 database/online service to store experiment metadata. If we run a few
 experiments:
 
@@ -92,7 +92,9 @@ $ dvc exp run --set-param train.batch_size=16
 ...
 ```
 
-We can display all of them with the `dvc exp show` command:
+The local experiments are powered by Git references, and you can learn about
+them in [this post](https://dvc.org/blog/experiment-refs). We can display all of
+them with the `dvc exp show` command:
 
 ```bash
 $ dvc exp show --only-changed --sort-by=dice_mean
@@ -107,42 +109,52 @@ $ dvc exp show --only-changed --sort-by=dice_mean
  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ```
 
-Then we’d pick the best one (e.g. highest `dice_mean` score) and commit it to
-our git repo:
+Once we identify one or a few best ones (e.g., highest `dice_mean` score), we
+can either
+[persist](https://dvc.org/doc/user-guide/experiment-management/persisting-experiments)
+them by creating a branch out of an experiment:
+
+```bash
+$ dvc exp branch exp-04bcd my-branch
+Git branch 'my-branch' has been created from experiment 'exp-04bcd'.
+To switch to the new branch run:
+        git checkout my-branch
+```
+
+or we can share them with our teammates by
+[uploading](https://dvc.org/doc/user-guide/experiment-management/sharing-experiments#uploading-experiments)
+them to our git repo:
 
 ```bash
 $ dvc exp push origin exp-04bcd
 Pushed experiment 'exp-04bcd'to Git remote 'origin'.
 ```
 
-These local experiments are powered by Git references and you can learn about
-them in [this post](https://dvc.org/blog/experiment-refs).
-
 ## Collaboration and Reporting with Iterative Studio
 
 What if we needed to report the results to our team members or maybe hand over
 the project to one of them? How do we communicate everything we did since the
 conception of the project? What things resulted in the most significant
-improvements? What things didn’t seem to matter at all?
+improvements? What things didn't seem to matter at all?
 
 [Iterative Studio](https://studio.iterative.ai/) is a web-based application with
 seamless integration with DVC for data and model management, experiment
 tracking, visualization, and automation. It becomes especially valuable when
 collaborating with others on the same project or when there's a need to
 summarize the progress of the project through metrics and plots. All that's
-needed is to connect the project's repository with Studio. After that Studio
-will automatically parse all required information from `dvc.yaml`,
-`params.yaml`, and other text files that DVC recognizes. The end result will be
-a repository view. The view for our project is
+needed is to connect the project's repository with Studio. Then Studio will
+automatically parse all required information from `dvc.yaml`, `params.yaml`, and
+other text files that DVC recognizes. The result will be a repository view. The
+view for our project is
 [here](https://studio.iterative.ai/user/alex000kim/views/magnetic-tiles-defect-5kozhnu9jo).
 It displays commits, metrics, parameters, the remote location of data and models
 tracked by DVC, and more.
 
-In the screenshot below you can see that we created a separate `exp` branch that
-displays the results of the local experiments that we decided to commit to our
-remote repository e.g. trying different learning rates and batch sizes. Note
-that earlier we discarded all local experiments whose performance we weren’t
-satisfied with.
+In the screenshot below, you can see that we created a separate `exp` branch
+that displays the results of the local experiments that we decided to upload to
+our remote repository, like trying different learning rates and batch sizes.
+Note that earlier, we discarded all local experiments whose performance we
+weren't satisfied with.
 
 ![Studio view](/uploads/images/2022-05-04/studio_view.png '=800')
 
@@ -157,8 +169,8 @@ value of the loss function throughout training for a set of selected commits.
 ![DVCLive metrics displayed in Studio](/uploads/images/2022-05-04/dvc_live_studio.png '=800')
 
 Now, for example, if we see that the loss function hasn't reached a plateau
-after a certain number of epochs, we’ll try increasing this number. Or, even
-worse, if we see the loss function growing over time, it’ll be an indication
+after a certain number of epochs, we'll try increasing this number. Or, even
+worse, if we see the loss function growing over time, it'll be an indication
 that our learning rate may be too high.
 
 ## Summary
@@ -172,8 +184,8 @@ In this post, we talked about the following:
 - How DVCLive allows us to peek into the training process and helps us decide
   what ideas to try next
 
-What if we don’t have a machine with a powerful GPU, and we’d like to take
-advantage of our cloud infrastructure? What if we’d like to have a custom report
+What if we don't have a machine with a powerful GPU, and we'd like to take
+advantage of our cloud infrastructure? What if we'd like to have a custom report
 (with metrics, plots, and other visuals) accompany every commit/pull request on
 GitHub? The third (and last) part of this series of posts will demonstrate how
 another open-source tool from the Iterative ecosystem, [CML](https://cml.dev/),
