--- a/content/blog/2022-05-03-e2e-cv-pt1.md
+++ b/content/blog/2022-05-03-e2e-cv-pt1.md
@@ -1,22 +1,25 @@
 ---
 title:
-  'End-to-End Computer Vision API, Part 1: Data Versioning and ML pipelines'
+  'End-to-End Computer Vision API, Part 1: Data Versioning and ML Pipelines'
 date: 2022-05-03
 description: >
-
-  In the last few years, training a well-performing Computer Vision (CV) model
-  in Jupyter Notebooks became fairly straightforward if you use pre-trained Deep
-  Learning models and high-level libraries that abstract away much of the
-  complexity (`fastai`, `keras`, `pytorch-lightning` are just a few
-  examples).  The hard part is still incorporating this model into an
+  In most cases, training a well-performing Computer Vision (CV) model is not
+  the hardest part of building a Computer Vision-based system.  The hardest
+  parts are usually about incorporating this model into a maintainable
   application that runs in a production environment bringing value to the
   customers and our business.
 
 descriptionLong: |
+
   _This is the first part of a three-part series of posts._
 
-  In the last few years, training a well-performing Computer Vision (CV) model in Jupyter Notebooks became fairly straightforward if you use pre-trained Deep Learning models and high-level libraries that abstract away much of the complexity (`fastai`, `keras`, `pytorch-lightning` are just a few examples). 
-  The hard part is still incorporating this model into an application that runs in a production environment bringing value to the customers and our business.
+  Lately, training a well-performing Computer Vision (CV) model in Jupyter Notebooks became fairly straightforward. 
+  You can use pre-trained Deep Learning models and high-level libraries like `fastai`, `keras`, `pytorch-lightning` etc., that abstract away much of the complexity.
+  However, it's still hard to incorporate these models into a
+  maintainable production application in a way that brings value to the
+  customers and business. 
+
+  Below we'll present the tools that naturally integrate with your git repository and makes this part of the process significantly easier.
 picture: 2022-05-03/e2e-cv-pt1-cover.png
 author: alex_kim
 commentsUrl: https://discuss.dvc.org/t/end-to-end-computer-vision/1178
@@ -31,7 +34,8 @@ tags:
 
 ### Introduction
 
-A typical ML project lifecycle goes through three phases:
+In this series of posts, we'll describe an approach that streamlines the three
+phases that almost all CV projects go through:
 
 1. Active exploration or proof-of-concept phase. Here we try many different
    approaches to data preprocessing, model architectures, and hyperparameter
@@ -45,11 +49,17 @@ A typical ML project lifecycle goes through three phases:
 3. Production deployment phase. Here we promote a well-tested version of the
    application from the development environment to the production environment.
 
-In this series of posts we'll describe an approach that streamlines all three
-phases. As our demo project, we've selected a very common deployment pattern in
-CV projects: a CV model wrapped in a web API service. Automatic defect detection
-is an example problem that we are addressing with this pattern. Specifically,
-we'll perform an
+Automatic defect detection is a common problem encountered in many industries,
+especially manufacturing. A typical setup would include a conveyor belt that
+moves some products along the production line and a camera installed above the
+conveyor. The camera takes pictures of the products moving below and connects to
+a computer that controls it. This computer needs to send raw images to some
+defect detection service, receive information about the location and size of the
+defects, if any, and may even control what happens to a defective product by
+being connected to a robotic arm via a PLC (programmable logic controller).
+
+As our demo project, we've selected a very common deployment pattern for this
+setup: a CV model wrapped in a web API service. Specifically, we'll perform an
 [image segmentation](https://ai.stanford.edu/~syyeung/cvweb/tutorial3.html) task
 on a magnetic tiles dataset first introduced in this
 [paper](https://www.researchgate.net/profile/Congying-Qiu/publication/327701995_Saliency_defect_detection_of_magnetic_tiles/links/5b9fd1bd45851574f7d25019/Saliency-defect-detection-of-magnetic-tiles.pdf)
@@ -68,11 +78,10 @@ and available in this GitHub
 
 ### Target Audience
 
-We assume the target audience of this post to be technical folks (e.g. Software
-Engineers, ML Engineers, Data Scientists) who are familiar with the general
-Machine Learning and Computer Vision concepts, Python programming, CI/CD
-processes, and Cloud infrastructure. Familiarity with the Iterative ecosystem of
-tools such as [DVC](https://dvc.org/), [CML](https://cml.dev/), and
+We assume the target audience of this post to be technical folks who are
+familiar with the general Computer Vision concepts, CI/CD processes, and Cloud
+infrastructure. Familiarity with the Iterative ecosystem of tools such as
+[DVC](https://dvc.org/), [CML](https://cml.dev/), and
 [Studio](https://studio.iterative.ai/) is not required but would help with
 understanding the nuances of our solution.
 
