address comments and add some example images

--- a/content/blog/2022-05-05-e2e-cv-pt3.md
+++ b/content/blog/2022-05-05-e2e-cv-pt3.md
@@ -127,7 +127,7 @@ the project's lifecycle we are in:
    4. open a pull request and post a report to it that contains a table with
       metrics and model outputs (segmentation masks) on a few test images:
 
-      ```yaml
+      ```bash
       ...
       # Open a pull request
       cml pr dvc.lock metrics.json training_metrics.json training_metrics_dvc_plots/**
@@ -185,18 +185,74 @@ the project's lifecycle we are in:
       ```
 
       Now we can test our API and assess the end-to-end performance of the
-      overall solution.
+      overall solution. If we pick a random test image `exp3_num_258558.jpg`,
+      ![test image `exp3_num_258558.jpg`](/uploads/images/2022-05-05/exp3_num_258558.jpg '=300')
+
+      we can send it to the endpoint using the `curl` command like this:
+
+      ```bash
+      $ curl -F 'image=@data/MAGNETIC_TILE_SURFACE_DEFECTS/test_images/exp3_num_258558.jpg' \
+      -v https://demo-api-mag-tiles-dev.herokuapp.com/analyze
+      ```
+
+      This will return some http-header info and the body of the response
+      containing the defect segmentation mask (`0` for pixel locations without
+      defects and `1` otherwise):
+
+      ```json
+      *   Trying 18.208.60.216:443...
+      * Connected to demo-api-mag-tiles-dev.herokuapp.com (18.208.60.216) port 443 (#0)
+      ...
+      {"pred":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+      0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+      0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,
+      1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+      ...
+      ```
+
+      Alternatively, we can do a similar thing with a Python script that also
+      saves the output mask into a `exp3_num_258558_mask.png` image:
+
+      ```python
+      import json
+      from pathlib import Path
+
+      import matplotlib.cm as cm
+      import matplotlib.pyplot as plt
+      import numpy as np
+      import requests
+
+      url = 'https://demo-api-mag-tiles-dev.herokuapp.com/analyze'
+      file_path = Path(
+          'data/MAGNETIC_TILE_SURFACE_DEFECTS/test_images/exp3_num_258558.jpg')
+      files = {'image': (str(file_path), open(file_path, 'rb'), "image/jpeg")}
+      response = requests.post(url, files=files)
+      data = json.loads(response.content)
+      pred = np.array(data['pred'])
+      plt.imsave(f'{file_path.stem}_mask.png', pred, cmap=cm.gray)
+      ```
+
+      Below you can see what this mask looks like.
+      ![Output mask `exp3_num_258558_mask.png`](/uploads/images/2022-05-05/exp3_num_258558_mask.png '=300')
 
 3. [Workflow for deploying to the production environment](https://github.com/iterative/magnetic-tiles-defect/blob/main/.github/workflows/3-deploy.yaml)
 
    ![Workflow for deploying to the production environment](/uploads/images/2022-05-05/workflow_prod.png '=800')
 
-   If we've thoroughly tested and monitored the performance of our development
-   web API, we can merge the development branch into the main branch of our
-   repository. Again, this triggers the third CI/CD workflow that deploys the
-   code from the main branch to the production API. This looks identical to the
-   deployment into the development environment except for `heroku_app_name`
-   which is now set to `"demo-api-mag-tiles-prod"`.
+   Before we merge the dev branch into the main branch, we would need to
+   thoroughly test and monitor the application in the development environment. A
+   good test could be duplicating real image requests to the dev endpoint (here
+   it's
+   [https://demo-api-mag-tiles-**dev**.herokuapp.com/analyze](https://demo-api-mag-tiles-dev.herokuapp.com/analyze))
+   for some period of time and assess the quality of the returned segmentation
+   masks.
+
+   If there are no issues and we are confident in the quality of the new model,
+   we can merge the development branch into the main branch of our repository.
+   Again, this triggers the third CI/CD workflow that deploys the code from the
+   main branch to the production API. This looks identical to the deployment
+   into the development environment, except now the deployment endpoint will be
+   [https://demo-api-mag-tiles-**prod**.herokuapp.com/analyze](https://demo-api-mag-tiles-prod.herokuapp.com/analyze).
 
 ## Summary
 
@@ -225,6 +281,7 @@ We've talked about the following:
 
 - Reproduce this solution by setting your own configs, tokens, and access keys
   to GitHub, AWS, and Heroku
+- Add a check to merge PRs automatically if the metrics have improved
 - Add a few simple unit tests and update CML workflow files to run them before
   reproducing the pipeline
 - Apply this approach to a different Computer Vision problem using a different
