--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -74,7 +74,7 @@ Running stage 'evaluate':
 
 There is a super convenient set of
 [Experiment Management](https://dvc.org/doc/user-guide/experiment-management)
-features that makes switching between reproducible experiments very easy without
+features that make switching between reproducible experiments very easy without
 adding failed experiments to your git history. Check out this
 [blog post](https://dvc.org/blog/ml-experiment-versioning), which talks about
 the idea of "ML Experiments as Code." That means treating experiments as you'd
@@ -92,7 +92,12 @@ $ dvc exp run --set-param train.batch_size=16
 ...
 ```
 
-The local experiments are powered by Git references, and you can learn about
+Optionally, you can create delay the execution of the experiments by putting
+them in a
+[queue](https://dvc.org/doc/user-guide/experiment-management/running-experiments#the-experiments-queue),
+and execute them later with the `dvc exp run --run-all` command.
+
+These local experiments are powered by Git references, and you can learn about
 them in [this post](https://dvc.org/blog/experiment-refs). We can display all of
 them with the `dvc exp show` command:
 
