--- a/content/blog/2022-05-03-e2e-cv-pt1.md
+++ b/content/blog/2022-05-03-e2e-cv-pt1.md
@@ -34,20 +34,10 @@ tags:
 
 ### Introduction
 
-In this series of posts, we'll describe an approach that streamlines the three
-phases that almost all CV projects go through:
-
-1. Active exploration or proof-of-concept phase. Here we try many different
-   approaches to data preprocessing, model architectures, and hyperparameter
-   tuning with the goal of finally settling on the most promising combination.
-2. Application development phase. Here we build all the “plumbing” around the
-   model, that is: getting input data, massaging it into the right format,
-   passing it to the model, and, finally, serving the model's output. The goal
-   here is to end up with a version of an end-to-end application that is robust
-   and well-performing enough to be considered for deployment to the production
-   environment.
-3. Production deployment phase. Here we promote a well-tested version of the
-   application from the development environment to the production environment.
+In this series of posts, we'll describe an approach that streamlines the
+lifecycles stages of a typical Computer Vision project going from
+proof-of-concept to configuration and parameter tuning to, finally, deployment
+to the production environment.
 
 Automatic defect detection is a common problem encountered in many industries,
 especially manufacturing. A typical setup would include a conveyor belt that
@@ -180,7 +170,10 @@ In most ML projects, training data changes gradually over time as new training
 instances (images in our case) get added while older ones might be removed.
 Simply creating snapshots of our training data at the time of training (e.g.
 labeling data directories with dates) quickly becomes unsustainable since these
-snapshots will contain many duplicates.
+snapshots will contain many duplicates. Additionally, tracking which data
+directory was used to train each model becomes hard to manage very fast; and
+linking data versions and models to their respective code versions complicates
+things even further.
 
 A much better approach is to:
 
@@ -189,16 +182,10 @@ A much better approach is to:
 2. have the project’s git repository store only the reference links to the data
    while the actual data is stored in a remote storage
 
-This is exactly what we can do with DVC by running only a couple of DVC commands
-and relying on DVC to handle all the underlying complexity:
-
-- compute hashes of files (images in our case) and move them to the cache
-- automatically manage reflinks to files stored in cache depending on the
-  version of the dataset being used
-- push and pull to different remote storage solutions using the same command
-  syntax
-- and, most importantly, integrate the process of data versioning with git-based
-  workflows
+This is exactly what we can do with DVC by running only a couple of DVC
+commands. In turn, DVC handles all the underlying complexity of managing data
+versions, performing file deduplication, pushing and pulling to/from different
+remote storage solutions and more.
 
 Check out
 [this tutorial](https://dvc.org/doc/use-cases/versioning-data-and-model-files/tutorial)
