--- a/content/blog/2022-05-03-e2e-cv-pt1.md
+++ b/content/blog/2022-05-03-e2e-cv-pt1.md
@@ -56,7 +56,9 @@ on a magnetic tiles dataset first introduced in this
 and available in this GitHub
 [repository](https://github.com/abin24/Magnetic-tile-defect-datasets.).
 
-![A sample from the image segmentation dataset we used for this project. Top row: images of magnetic tile surfaces. Bottom row: segmentation mask (white pixels show defective areas)](/uploads/images/2022-05-03/dataset_sample.png '=800')
+![A sample from the image segmentation dataset we used for this project. Top
+row: images of magnetic tile surfaces. Bottom row: segmentation mask (white
+pixels show defective areas)](/uploads/images/2022-05-03/dataset_sample.png '=800')
 
 - This post (part 1) introduces the concepts of data versioning and ML pipelines
   as they apply to Computer Vision projects.
@@ -100,7 +102,8 @@ beyond the scope of this blog post. In short, we can say that it's based on the
 Heroku platform through a Docker container defined in this
 [`Dockerfile`](https://github.com/iterative/magnetic-tiles-defect/blob/main/Dockerfile).
 
-![Simplified diagram of the CV API solution](/uploads/images/2022-05-03/web_api_diagram.png '=800')
+![Simplified diagram of the CV API
+solution](/uploads/images/2022-05-03/web_api_diagram.png '=800')
 
 ### Prerequisites for Reproduction
 
@@ -136,13 +139,13 @@ which you can find
 [here](https://github.com/iterative/magnetic-tiles-defect/tree/main/notebooks).
 In short, there we have three notebooks:
 
-1. [`1_ProcessData.ipynb`](https://github.com/iterative/magnetic-tiles-defect/blob/main/notebooks/1_ProcessData.ipynb) -
+1. [`1_ProcessData.ipynb`](https://github.com/iterative/magnetic-tiles-defect/blob/main/notebooks/1_ProcessData.ipynb)
    downloads, processes, and organizes the data for easy loading into the
    training process later
-2. [`2_TrainSegmentationModel.ipynb`](https://github.com/iterative/magnetic-tiles-defect/blob/main/notebooks/2_TrainSegmentationModel.ipynb) -
+1. [`2_TrainSegmentationModel.ipynb`](https://github.com/iterative/magnetic-tiles-defect/blob/main/notebooks/2_TrainSegmentationModel.ipynb)
    uses [`fastai`](https://github.com/fastai/fastai) Deep Learning framework to
    train an image segmentation model
-3. [`3_Evaluate.ipynb`](https://github.com/iterative/magnetic-tiles-defect/blob/main/notebooks/3_Evaluate.ipynb) -
+1. [`3_Evaluate.ipynb`](https://github.com/iterative/magnetic-tiles-defect/blob/main/notebooks/3_Evaluate.ipynb)
    computes model performance on the test dataset
 
 Jupyter Notebook is by far the most popular tool for quick exploratory work when
@@ -191,7 +194,8 @@ Check out
 [this tutorial](https://dvc.org/doc/use-cases/versioning-data-and-model-files/tutorial)
 to learn more about data and model versioning with DVC.
 
-![Diagram of how DVC performs data versioning ](https://editor.analyticsvidhya.com/uploads/86351git-dvc.png)
+![Diagram of how DVC performs data versioning
+](https://editor.analyticsvidhya.com/uploads/86351git-dvc.png)
 
 In this project, AWS S3 is our remote storage configured in the
 [`.dvc/config`](https://github.com/iterative/magnetic-tiles-defect/blob/main/.dvc/config)
@@ -207,14 +211,14 @@ pipeline consists of a sequence of stages.
 First, we did some refactoring of our Jupyter code into individual and
 self-contained modules:
 
-- [`data_load.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/data_load.py) -
+- [`data_load.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/data_load.py)
   downloads raw data locally
-- [`data_split.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/data_split.py) -
+- [`data_split.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/data_split.py)
   splits data into train and test subsets
-- [`train.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/train.py) -
+- [`train.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/train.py)
   uses [`fastai`](https://github.com/fastai/fastai) library to train a UNet
   model with a ResNet-34 encoder and saves it into a pickle file
-- [`eval.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/eval.py) -
+- [`eval.py`](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/stages/eval.py)
   evaluates the model's performance on the test subset
 
 Specific execution commands, dependencies, and outputs of each stage are defined
