--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -55,10 +55,15 @@ those. By changes, we mean _everything_ that might affect the predictive
 performance of your model like changes to the dataset, source code and/or
 parameters. This not only ensures complete reproducibility but often
 significantly reduces the time needed to rerun the whole pipeline while ensuring
-consistent results on every rerun. For example, if we only change the code in
-the evaluation stage (e.g., change what type of metrics we want to compute),
-there is no reason for us to rerun the often time-consuming data preprocessing
-and model training stages:
+consistent results on every rerun. For example, at first, we started with a
+pixel accuracy metric (the percent of pixels in your image that are classified
+correctly). Later, we realized that it might not be the best metric to track (as
+described in
+[this blog post](https://towardsdatascience.com/metrics-to-evaluate-your-semantic-segmentation-model-6bcb99639aa2)),
+and we decided to include the Dice coefficient into our metrics. There is no
+reason for us to rerun the often time-consuming data preprocessing and model
+training stages if we want to incorporate these updates. DVC pipelines can skip
+the execution of these stages without our explicit instructions:
 
 ```bash
 $ dvc exp run
@@ -80,26 +85,26 @@ adding failed experiments to your git history. Check out this
 the idea of "ML Experiments as Code." That means treating experiments as you'd
 treat code, that is, use git to track all changes in configs, metrics, and data
 versions through text files. This approach removes the need for a separate
-database/online service to store experiment metadata. If we run a few
-experiments:
+database/online service to store experiment metadata. If wanted to run a few
+experiments with different scales of learning rate values (e.g. `0.1`, `0.01`
+and `0.001`), we'd do that as follows:
 
 ```bash
 $ dvc exp run --set-param train.learning_rate=0.1
 ...
 $ dvc exp run --set-param train.learning_rate=0.01
 ...
-$ dvc exp run --set-param train.batch_size=16
+$ dvc exp run --set-param train.learning_rate=0.001
 ...
 ```
 
-Optionally, you can create delay the execution of the experiments by putting
-them in a
+Optionally, you can delay the execution of the experiments by putting them in a
 [queue](https://dvc.org/doc/user-guide/experiment-management/running-experiments#the-experiments-queue),
 and execute them later with the `dvc exp run --run-all` command.
 
 These local experiments are powered by Git references, and you can learn about
-them in [this post](https://dvc.org/blog/experiment-refs). We can display all of
-them with the `dvc exp show` command:
+them in [this post](https://dvc.org/blog/experiment-refs). We can display all
+experiments with the `dvc exp show` command:
 
 ```bash
 $ dvc exp show --only-changed --sort-by=dice_mean
@@ -115,7 +120,7 @@ $ dvc exp show --only-changed --sort-by=dice_mean
 ```
 
 Once we identify one or a few best ones (e.g., highest `dice_mean` score), we
-can either
+can
 [persist](https://dvc.org/doc/user-guide/experiment-management/persisting-experiments)
 them by creating a branch out of an experiment:
 
@@ -126,14 +131,12 @@ To switch to the new branch run:
         git checkout my-branch
 ```
 
-or we can share them with our teammates by
-[uploading](https://dvc.org/doc/user-guide/experiment-management/sharing-experiments#uploading-experiments)
-them to our git repo:
-
-```bash
-$ dvc exp push origin exp-04bcd
-Pushed experiment 'exp-04bcd'to Git remote 'origin'.
-```
+To track detailed information about the training process, we integrated
+[DVCLive](https://dvc.org/doc/dvclive) into the training code by
+[adding a callback object](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/train_utils.py#L48)
+to the training function. DVCLive is a Python library for logging machine
+learning metrics and other metadata in simple file formats, which is fully
+compatible with DVC.
 
 ## Collaboration and Reporting with Iterative Studio
 
@@ -163,13 +166,9 @@ weren't satisfied with.
 
 ![Studio view](/uploads/images/2022-05-04/studio_view.png '=800')
 
-To track detailed information about the training process, we integrated
-[DVCLive](https://dvc.org/doc/dvclive) into the training code by
-[adding a callback object](https://github.com/iterative/magnetic-tiles-defect/blob/main/src/train_utils.py#L48)
-to the training function. DVCLive is a Python library for logging machine
-learning metrics and other metadata in simple file formats, which is fully
-compatible with DVC. Below we can see the evolution of the key metrics and the
-value of the loss function throughout training for a set of selected commits.
+Below we can see the evolution of the key metrics and the value of the loss
+function throughout training (enabled by the earlier integration of
+[DVCLive](https://dvc.org/doc/dvclive)) for a set of selected commits.
 
 ![DVCLive metrics displayed in Studio](/uploads/images/2022-05-04/dvc_live_studio.png '=800')
 
