--- a/content/blog/2022-05-03-e2e-cv-pt1.md
+++ b/content/blog/2022-05-03-e2e-cv-pt1.md
@@ -166,9 +166,6 @@ That's where the concepts of data versioning and ML pipelines come in.
 
 ### Data Versioning
 
-Here, we'll briefly touch on DVC's functionality to version data and other
-artifacts (e.g. model weights).
-
 In most ML projects, training data changes gradually over time as new training
 instances (images in our case) get added while older ones might be removed.
 Simply creating snapshots of our training data at the time of training (e.g.
@@ -185,10 +182,10 @@ A much better approach is to:
 2. have the project’s git repository store only the reference links to the data
    while the actual data is stored in a remote storage
 
-This is exactly what we can do with DVC by running only a couple of DVC
-commands. In turn, DVC handles all the underlying complexity of managing data
-versions, performing file deduplication, pushing and pulling to/from different
-remote storage solutions and more.
+This is exactly what we can do with [DVC](https://dvc.org/) by running only a
+couple of DVC commands. In turn, DVC handles all the underlying complexity of
+managing data versions, performing file deduplication, pushing and pulling
+to/from different remote storage solutions and more.
 
 Check out
 [this tutorial](https://dvc.org/doc/use-cases/versioning-data-and-model-files/tutorial)
