--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -2,17 +2,21 @@
 title: 'End-to-End Computer Vision API, Part 2: Local Experiments'
 date: 2022-05-04
 description: >
-  In part 1 of this series of posts, we introduced a solution to a common
-  problem faced by companies in the manufacturing industry: detecting defects
-  from images of products moving along a production line. The solution we
-  proposed was a Deep Learning-based image segmentation model wrapped in a web
-  API. We talked about effective management and versioning of large datasets and
-  the creation of reproducible ML pipelines.
+  In part 1, we talked about effective management and versioning of large
+  datasets and the creation of reproducible ML pipelines.
+
+  Here we'll learn about experiment management:  generation of many experiments by
+  tweaking configurations and hyperparameters;  their comparison based on
+  performance metrics; and persistence of the most promising experiments
 
 descriptionLong: |
   _This is the second part of a three-part series of posts._
 
   In part 1 of this series of posts, we introduced a solution to a common problem faced by companies in the manufacturing industry: detecting defects from images of products moving along a production line. The solution we proposed was a Deep Learning-based image segmentation model wrapped in a web API. We talked about effective management and versioning of large datasets and the creation of reproducible ML pipelines.
+  Here we'll learn about experiment management: 
+  generation of many experiments by tweaking configurations and hyperparameters; 
+  their comparison based on performance metrics; and
+  persistence of the most promising experiments
 
 picture: 2022-05-04/e2e-cv-pt2-cover.png
 author: alex_kim
@@ -176,7 +180,10 @@ Studio](/uploads/images/2022-05-04/dvc_live_studio.png '=800')
 Now, for example, if we see that the loss function hasn't reached a plateau
 after a certain number of epochs, we'll try increasing this number. Or, even
 worse, if we see the loss function growing over time, it'll be an indication
-that our learning rate may be too high.
+that our learning rate may be too high. In this case, we may generate a few
+additional experiments with lower learning rate values, eventually picking the
+one that achieves good model performance after a reasonable number of training
+epochs.
 
 ## Summary
 
