--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -5,8 +5,8 @@ description: >
   In part 1, we talked about effective management and versioning of large
   datasets and the creation of reproducible ML pipelines.
 
-  Here we'll learn about experiment management:  generation of many experiments by
-  tweaking configurations and hyperparameters;  their comparison based on
+  Here we'll learn about experiment management:  generation of many experiments
+  by tweaking configurations and hyperparameters;  their comparison based on
   performance metrics; and persistence of the most promising experiments
 
 descriptionLong: |
