--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -6,17 +6,20 @@ description: >
   datasets and the creation of reproducible ML pipelines.
 
   Here we'll learn about experiment management:  generation of many experiments
-  by tweaking configurations and hyperparameters;  their comparison based on
-  performance metrics; and persistence of the most promising experiments
+  by tweaking configurations and hyperparameters;  comparison of experiments
+  based on their performance metrics; and persistence of the most promising ones
 
 descriptionLong: |
   _This is the second part of a three-part series of posts._
 
-  In part 1 of this series of posts, we introduced a solution to a common problem faced by companies in the manufacturing industry: detecting defects from images of products moving along a production line. The solution we proposed was a Deep Learning-based image segmentation model wrapped in a web API. We talked about effective management and versioning of large datasets and the creation of reproducible ML pipelines.
+  In part 1 of this series of posts, we introduced a solution to a common problem faced by companies 
+  in the manufacturing industry: detecting defects from images of products moving along a production line. 
+  The solution we proposed was a Deep Learning-based image segmentation model wrapped in a web API. 
+  We talked about effective management and versioning of large datasets and the creation of reproducible ML pipelines.
   Here we'll learn about experiment management: 
   generation of many experiments by tweaking configurations and hyperparameters; 
-  their comparison based on performance metrics; and
-  persistence of the most promising experiments
+  comparison of experiments based on their performance metrics; and
+  persistence of the most promising ones
 
 picture: 2022-05-04/e2e-cv-pt2-cover.png
 author: alex_kim
